--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1213,7 +1213,9 @@ border:6px solid #3498DB;
 			padding-right: 20px;
 			padding-left: 20px;
 		}
-		
+		#Section-2 .container{
+			width: 301px;
+		}
 		.navbar-inverse .navbar-inner {
 			min-height: 30px;
 		}
